--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
     </section>
 
-    <section class="gradient-box">
-        <article class="text-content">
+    <article class="gradient-box">
+        <div class="text-content">
             <h2>СТРИМ РАЗРАБОТЧИКОВ: ВЕРСИЯ 2.6</h2>
             <div>
                 <p><i>Ожидаемая дата выхода: </i> 23 октября 2024 года</p>
@@ -45,8 +45,8 @@
                     <li>WB3H6664CK9T    -   Звёздный Нефрит x100, Очищенный Эфир x4</li>
                 </ul>
             </div>
-        </article>
-    </section>
+        </div>
+    </article>
     
     <section>
         <div class="gradient-box">
@@ -193,6 +193,7 @@
             <div class="gradient-box">
                 <div class="text-content">
                     <article>
+                        <h3>ПЕРВАЯ ФАЗА</h3>
                         <p>Первая фаза "Прыжка события: Персонажи" продлится с <span style="color: orange;">23 октября</span> по <span style="color: orange;">13 ноября</span>, во время которого первопроходцы могут заполучить нового легендарного персонажа <span style="color: orange;"><i>Раппа</i></span> и давно вышедшего легендарного персонажа <span style="color: orange;"><i>Дань Хэн: Пожиратель Луны</i></span>. С данными баннерами также пройдут и временные баннеры "Прыжки события: Световые Конусы", в которых первопроходцы могут заполучить самое подходящее оружие для данных легендарных персонажей.</p>
                         <div class="image-container">
                             <img src="/img/jpg/event_warp_first_phase_1.jpg" alt="Временный баннер фаза 1" class="responsive-image">
@@ -200,6 +201,7 @@
                         </div>
                     </article>
                     <article>
+                        <h3>ВТОРАЯ ФАЗА</h3>
                         <p>Вторая фаза "Прыжка события: Персонажи" продлится с <span style="color: orange;">13 ноября</span> по <span style="color: orange;">4 декабря</span>, во время которого первопроходцы могут заполучить давно вышедших легендарных персонажей <span style="color: orange;"><i>Ахерон</i></span> и <span style="color: orange;"><i>Авантюрин</i></span>. С данными баннерами также пройдут и временные баннеры "Прыжки события: Световые Конусы", в которых первопроходцы могут заполучить самое подходящее оружие для данных легендарных персонажей.</p>
                         <div class="image-container">
                             <img src="/img/jpg/event_warp_second_phase_1.jpg" alt="Временный баннер фаза 1" class="responsive-image">
@@ -281,19 +283,19 @@
         </section>
     </section>
 
-    <section class="gradient-box" style="display: flex; align-items: center; justify-content: center;">
-        <article class="text-content">
+    <div class="gradient-box" style="display: flex; align-items: center; justify-content: center;">
+        <div class="text-content">
             <p>Контакты</p>
-        </article>
-        <article class="social-icons">
+        </div>
+        <div class="social-icons">
             <a href="https://t.me/anxlle" target="_blank">
                 <img src="/img/png/tg_black_logo_icon_147058.png" alt="Телеграм Telegram" class="social-icon" aria-hidden="true">
             </a>
             <a href="https://vk.com/anxlle" target="_blank">
                 <img src="/img/png/vk_black_logo_icon_147058.png" alt="ВК VK" class="social-icon" aria-hidden="true">
             </a>
-        </article>
-    </section>
+        </div>
+    </div>
     
 </body>
 </html>
