--- a/index.html
+++ b/index.html
@@ -288,12 +288,8 @@
             <p>Контакты</p>
         </div>
         <div class="social-icons">
-            <a href="https://t.me/anxlle" target="_blank">
-                <img src="/img/png/tg_black_logo_icon_147058.png" alt="Телеграм Telegram" class="social-icon" aria-hidden="true">
-            </a>
-            <a href="https://vk.com/anxlle" target="_blank">
-                <img src="/img/png/vk_black_logo_icon_147058.png" alt="ВК VK" class="social-icon" aria-hidden="true">
-            </a>
+            <a href="https://t.me/anxlle" target="_blank" class="social-icon tg-icon"></a>
+            <a href="https://vk.com/anxlle" target="_blank" class="social-icon vk-icon"></a>
         </div>
     </div>
     
