--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="text-content">
                     <h3>НОВЫЙ ЛЕГЕНДАРНЫЙ СВЕТОВОЙ КОНУС - СВИТОК НИНДЗЯ: ОЧИЩЕНИЕ ХАОСОМ (ПУТЬ ЭРУДИЦИИ)</h3>
                     <div class="image-container">
-                        <img src="img/jpg/new_5_star_weapon.jpg" alt="Новое легендарное оружие свитко ниндзя очищение хаосом" class="responsive-image">
+                        <img src="img/jpg/new_5_star_weapon.jpg" alt="Новый легендарный конус свиток ниндзя очищение хаосом" class="responsive-image">
                     </div>
                     <div>
                         <p>Базовые характеристики выглядят следующим образом:</p>
@@ -149,7 +149,7 @@
                 <div class="text-content">
                     <h3>НОВЫЙ ЭПИЧЕСКИЙ СВЕТОВОЙ КОНУС - МОНТАЖ ГРЁЗ (ПУТЬ ИЗОБИЛИЯ)</h3>
                     <div class="image-container">
-                        <img src="img/jpg/new_4_star_weapon.jpg" alt="Новое эпическое оружие монтаж грёз" class="responsive-image">
+                        <img src="img/jpg/new_4_star_weapon.jpg" alt="Новый эпический световой конус монтаж грёз" class="responsive-image">
                     </div>
                     <div>
                         <p>Базовые характеристики выглядят следующим образом:</p>
@@ -204,8 +204,8 @@
                         <h3>ВТОРАЯ ФАЗА</h3>
                         <p>Вторая фаза "Прыжка события: Персонажи" продлится с <span style="color: orange;">13 ноября</span> по <span style="color: orange;">4 декабря</span>, во время которого первопроходцы могут заполучить давно вышедших легендарных персонажей <span style="color: orange;"><i>Ахерон</i></span> и <span style="color: orange;"><i>Авантюрин</i></span>. С данными баннерами также пройдут и временные баннеры "Прыжки события: Световые Конусы", в которых первопроходцы могут заполучить самое подходящее оружие для данных легендарных персонажей.</p>
                         <div class="image-container">
-                            <img src="/img/jpg/event_warp_second_phase_1.jpg" alt="Временный баннер фаза 1" class="responsive-image">
-                            <img src="/img/jpg/event_warp_second_phase_2.jpg" alt="Временный баннер фаза 1" class="responsive-image">
+                            <img src="/img/jpg/event_warp_second_phase_1.jpg" alt="Временный баннер фаза 2" class="responsive-image">
+                            <img src="/img/jpg/event_warp_second_phase_2.jpg" alt="Временный баннер фаза 2" class="responsive-image">
                         </div>
                     </article>
                 </div>
